<resources>
    <string name="app_name">Jumper Jumps!</string>
    <string name="Weight">Weight (lbs)</string>
    <string name="Height">Height (ft)</string>
    <string name="Gender">Gender (M/F)</string>
    <string name="OK">OK</string>
    <string name="Name">Name</string>
    <string name="Train">Train</string>
    <string name="StopTrain">Stop</string>
    <string name="StartJump">Start</string>
    <string name="StopJump">Exit</string>
    <string name="PauseJump">Pause</string>
    <string name="ResumeJump">Resume</string>
    <string name="stopWatchZero">00:00   0</string>

</resources>
